--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,5 @@
 set(INCH_TEST_NAME UnitTests)
 
-add_library(Catch INTERFACE)
-target_include_directories(Catch INTERFACE ${PROJECT_SOURCE_DIR}/external/)
-
 set(TEST_SOURCE_DIR ${PROJECT_SOURCE_DIR}/tests)
 set(TEST_SOURCES
   ${TEST_SOURCE_DIR}/main.cpp
@@ -21,7 +18,7 @@ add_executable(${INCH_TEST_NAME} ${TEST_SOURCES} ${IMPLEMENTATION_SOURCES})
 # Where are the header files
 target_include_directories(${INCH_TEST_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include/)
 
-target_link_libraries(${INCH_TEST_NAME} Catch)
+target_link_libraries(${INCH_TEST_NAME} Catch2::Catch2)
 
 if ( NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" )
   target_link_libraries(${INCH_TEST_NAME} stdc++fs)
