--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -20,7 +20,15 @@ jobs:
         type: [Debug, Release]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+      - name: Checkout submodules
+        shell: bash
+        run: |
+          # If your submodules are configured to use SSH instead of HTTPS please uncomment the following line
+          # git config --global url."https://github.com/".insteadOf "git@github.com:"
+          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+          git submodule sync --recursive
+          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
         # We currently compile against C++17 so default gcc and clang on ubuntu-latest are too old
       - name: Install dependencies
         run: sudo apt update && sudo apt install -y ninja-build clang gcc-${{ matrix.version }} g++-${{ matrix.version }} clang-${{ matrix.version }}
