--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,13 @@ jobs:
     docker:
       - image: ubuntu:bionic
     steps:
+      - run: apt update && apt install -y git cmake ninja-build gcc g++ gcc-8 g++-8
       - checkout
       - run:
           name: "Pull Submodules"
           command: |
             git submodule init
             git submodule update --remote
-      - run: apt update && apt install -y cmake ninja-build gcc g++ gcc-8 g++-8
       - run: cmake -GNinja -H. -B../Debug-build -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Debug
       - run: cmake --build ../Debug-build
       - run: cd ../Debug-build && ctest -V
@@ -19,13 +19,13 @@ jobs:
     docker:
       - image: ubuntu:bionic
     steps:
+      - run: apt update && apt install -y git cmake ninja-build gcc g++ gcc-8 g++-8
       - checkout
       - run:
           name: "Pull Submodules"
           command: |
             git submodule init
             git submodule update --remote
-      - run: apt update && apt install -y cmake ninja-build gcc g++ gcc-8 g++-8
       - run: cmake -GNinja -H. -B../Release-build -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Release
       - run: cmake --build ../Release-build
       - run: cd ../Release-build && ctest -V
@@ -34,13 +34,13 @@ jobs:
     docker:
       - image: ubuntu:bionic
     steps:
+      - run: apt update && apt install -y git cmake ninja-build gcc g++ gcc-8 g++-8
       - checkout
       - run:
           name: "Pull Submodules"
           command: |
             git submodule init
             git submodule update --remote
-      - run: apt update && apt install -y cmake ninja-build clang clang-8 libstdc++-8-dev
       - run: cmake -GNinja -H. -B../Debug-build -DCMAKE_CXX_COMPILER=/usr/bin/clang++-8 -DCMAKE_BUILD_TYPE=Debug
       - run: cmake --build ../Debug-build
       - run: cd ../Debug-build && ctest -V
@@ -49,13 +49,13 @@ jobs:
     docker:
       - image: ubuntu:bionic
     steps:
+      - run: apt update && apt install -y git cmake ninja-build gcc g++ gcc-8 g++-8
       - checkout
       - run:
           name: "Pull Submodules"
           command: |
             git submodule init
             git submodule update --remote
-      - run: apt update && apt install -y cmake ninja-build clang clang-8 libstdc++-8-dev
       - run: cmake -GNinja -H. -B../Release-build -DCMAKE_CXX_COMPILER=/usr/bin/clang++-8 -DCMAKE_BUILD_TYPE=Release
       - run: cmake --build ../Release-build
       - run: cd ../Release-build && ctest -V
