--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,8 @@ os:
   - Visual Studio 2019
 
 install:
-  - git submodule update --init --recursive
+  - git submodule init
+  - git submodule update --recursive
 
 # Win32 and x64 are CMake-compatible solution platform names.
 # This allows us to pass %PLATFORM% to CMake -A.
