Set globally, not just for a specific target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ include(CheckIPOSupported)
 check_ipo_supported(RESULT IPOsupported OUTPUT error)
 if ( IPOsupported )
   message(STATUS "Use IPO/LTO")
-  set_property(TARGET ${PROJECT_NAME} PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
+  set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
 else()
   message(STATUS "IPO/LTO not supported: <${error}>")
 endif()
