Move project setting into their own file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ if ( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
   message(FATAL_ERROR "In-source build attempt detected")
 endif()
 
-# CheclIPOSupported was introduced in 3.9
+# CheckIPOSupported was introduced in 3.9
 cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
 
 # Project name, along with language type
@@ -20,45 +20,13 @@ project(
   VERSION 0.9.8
   )
 
-# Output compilation database that can be used by analysis tools
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
 # Put all binaries in a common location
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-# Compile against c++17
-set(CMAKE_CXX_STANDARD 17)
-# We need c++17 so can't fallback
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-# Use -std=c++?? rather than -std=gnu++??
-set(CMAKE_CXX_EXTENSIONS OFF)
+# Add the 'cmake' folder
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
-# Use Debug as the default build type
-if ( NOT CMAKE_BUILD_TYPE )
-  set(
-    CMAKE_BUILD_TYPE "RelWithDebInfo"
-    CACHE STRING "Set the build type to use: Debug, Release, RelWithDebInfo (default), MinSizeRel" FORCE
-    )
-endif ()
-
-find_program(CCACHE ccache)
-if(CCACHE)
-  message(STATUS "Using ccache")
-  set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE})
-else()
-  message(STATUS "ccache not found cannot use")
-endif()
-
-
-include(CheckIPOSupported)
-check_ipo_supported(RESULT IPOsupported OUTPUT error)
-if ( IPOsupported )
-  message(STATUS "Use IPO/LTO")
-  set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
-else()
-  message(STATUS "IPO/LTO not supported: <${error}>")
-endif()
-
+include(GeneralProjectSettings)
 
 add_subdirectory(include/${PROJECT_NAME})
 
