--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,27 +75,10 @@ target_compile_options(${PROJECT_NAME} PUBLIC ${PROJECT_WARNINGS})
 include(Doxygen)
 enable_doxygen()
 
-
+# I know this doesn't work, but it will!
 # Code Coverage Configuration
-add_library(coverage_config INTERFACE)
-
-option(INCH_CODE_COVERAGE "Enable coverage reporting" OFF)
-if(INCH_CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-  message(STATUS "Checking code coverage")
-  # Add required flags (GCC & LLVM/Clang)
-  target_compile_options(coverage_config INTERFACE
-    -O0        # no optimization
-    -g         # generate debug info
-    --coverage # sets all required flags
-  )
-  if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.13)
-    target_link_options(coverage_config INTERFACE --coverage)
-  else()
-    target_link_libraries(coverage_config INTERFACE --coverage)
-  endif()
-endif()
-
-target_link_libraries(${PROJECT_NAME} PUBLIC coverage_config)
+#include(CodeCoverage)
+#enable_codecoverage()
 
 # Unit testing wit Catch2
 option(INCH_UNIT_TESTS "Build unit tests" ON)
