--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ after_success:
   # capture coverage info
   - lcov --directory . --capture --output-file coverage.info
   # filter out system and test files.
-  - lcov --remove coverage.info '/usr/*' '*/tests/*' --output-file coverage.info
+  - lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info
   # output coverage data for debugging (optional)
   - lcov --list coverage.info
   # Uploading to CodeCov
