Need to run the binary to generate the files
This does not seem to match the various guides I have read, but
without running the binary, only gcno files are created, and lcov
needs the gdca.

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,7 @@ script:
   - ctest -V
   - cmake --build ../Release-build
   - cd ../Release-build
+  - ./bin/inch -i ../inch/options.template
   - ctest -V
 
 after_success:
