Ignore updates to other CI configs
If I'm playing with CI provider A, I don't want to be constantly
rebuilding on provider B when nothing has changed from it's point of
view.

Only circleCI doesn't provide this functionality. Unless I have missed
it in the documentation.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,10 @@ version: "{build}"
 skip_commits:
   files:
     - '*.md'
+    - .gitlab-ci.yml
+    - .tavis.yml
+    - .circleci/*
+    - .github/*
     - data_files/*
     - images/*
     - scripts/*
