--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -4,6 +4,10 @@ on: #[push, pull_request]
   push:
     paths-ignore:
       - '*.md'
+      - 'appveyor.yml'
+      - '.gitlab-ci.yml'
+      - '.travis.yml'
+      - '.circleci/**'
       - 'docs/**'
       - 'data_files/**'
       - 'images/**'
