--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,10 @@ gcc-build-Debug:
   except:
     changes:
         - "*.md"
+        - appveyor.yml
+        - .travis.yml
+        - .circleci/*
+        - .github/*
         - scripts/*
         - images/*
         - data_files/*
@@ -36,6 +40,10 @@ gcc-build-Release:
   except:
     changes:
         - "*.md"
+        - appveyor.yml
+        - .travis.yml
+        - .circleci/*
+        - .github/*
         - scripts/*
         - images/*
         - data_files/*
@@ -54,6 +62,10 @@ clang-build-Debug:
   except:
     changes:
         - "*.md"
+        - appveyor.yml
+        - .travis.yml
+        - .circleci/*
+        - .github/*
         - scripts/*
         - images/*
         - data_files/*
@@ -71,6 +83,10 @@ clang-build-Release:
   except:
     changes:
         - "*.md"
+        - appveyor.yml
+        - .travis.yml
+        - .circleci/*
+        - .github/*
         - scripts/*
         - images/*
         - data_files/*
