--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,16 +19,19 @@ jobs:
     docker:
       - image: ubuntu:bionic
     steps:
-      - run: apt update && apt install -y git cmake ninja-build gcc g++ gcc-8 g++-8
+      - run: apt update && apt install -y git cmake ninja-build lcov gcc g++ gcc-8 g++-8
       - checkout
       - run:
           name: "Pull Submodules"
           command: |
             git submodule init
             git submodule update --remote
-      - run: cmake -GNinja -H. -B../Release-build -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Release
+      - run: cmake -GNinja -H. -B../Release-build -DINCH_CODE_COVERAGE=ON -DCOVERAGE+COMMAND=/usr/bin/gcov-8 -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Release
       - run: cmake --build ../Release-build
-      - run: cd ../Release-build && ctest -V
+      - run: cd ../Release-build && ./bin/inch -i ../inch/options.template && ctest -V
+      - run: lcov --directory . --capture --gcov-tool /usr/bin/gcov-8 --output-file coverage.info
+      - run: lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info && lcov --list coverage.info
+      - run: bash <(curl -s https://codecov.io/bash) -x /usr/bin/gcov-8 -f coverage.info || echo "Codecov did not collect coverage reports"
 
   build_clang_debug:
     docker:
