Try and work out code goes into infinite loop

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
             git submodule update --remote
       - run: cmake -GNinja -H. -B../Debug-build -DINCH_CODE_COVERAGE=ON -DCOVERAGE_COMMAND=/usr/bin/gcov-8 -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Debug
       - run: cmake --build ../Debug-build
-      - run: echo "${CIRCLE_PROJECT_REPONAME} ${CIRCLE_WORKING_DIRECTORY}"
-      - run: cd ../Debug-build && ctest -V && ./bin/inch -i ../${CIRCLE_PROJECT_REPONAME}/options.template
+      - run: echo "${CIRCLE_PROJECT_REPONAME} ${CIRCLE_WORKING_DIRECTORY}" && pwd && ls -l ../inch/
+      - run: cd ../Debug-build && ctest -V
       - run: lcov --directory . --capture --gcov-tool /usr/bin/gcov-8 --output-file coverage.info
       - run: lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info && lcov --list coverage.info
       - run: bash <(curl -s https://codecov.io/bash) -x /usr/bin/gcov-8 -f coverage.info || echo "Codecov did not collect coverage reports"
