--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - ['lcov' 'g++-8']
+            - ['lcov','g++-8']
             - ninja-build
       env: COMPILER='g++-8' COVERAGE=1
 
