Let's try using a newer version of ubuntu

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.0
 jobs:
   build_gcc_debug:
     docker:
-      - image: ubuntu:bionic
+      - image: circleci/buildpack-deps:eoan
     steps:
       - run: apt update && apt install -y git cmake ninja-build lcov gcc g++ gcc-8 g++-8
       - checkout
@@ -14,12 +14,15 @@ jobs:
       - run: cmake -GNinja -H. -B../Debug-build -DINCH_CODE_COVERAGE=ON -DCOVERAGE_COMMAND=/usr/bin/gcov-8 -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Debug
       - run: cmake --build ../Debug-build
       - run: echo "${CIRCLE_PROJECT_REPONAME} ${CIRCLE_WORKING_DIRECTORY}" && pwd && ls -l ../ && ls -l ../project
-      - run: cd ../Debug-build && ctest -V # && ./bin/inch -i ../project/options.template
-      # - run: pwd && find . | grep -E "gcno|gcda"
-      # - run: lcov --directory . --capture --gcov-tool /usr/bin/gcov-8 --output-file coverage.info
-      # - run: lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info && lcov --list coverage.info
-      # - run: bash <(curl -s https://codecov.io/bash) -x /usr/bin/gcov-8 -f coverage.info || echo "Codecov did not collect coverage reports"
-
+      - run: cd ../Debug-build && ctest -V
+      - run:
+          name: "Code coverare metrics"
+          command: |
+            cd ../Debug-build && ctest -V && ./bin/inch -i ../project/options.template
+            lcov --directory . --capture --gcov-tool /usr/bin/gcov-8 --output-file coverage.info
+            lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info && lcov --list coverage.info
+            bash <(curl -s https://codecov.io/bash) -x /usr/bin/gcov-8 -f coverage.info || echo "Codecov did not collect coverage reports"
+      - run: uname -a
 
   build_gcc_release:
     docker:
