Wasn't linking the tests against the coverage library
This is why I needed to run the executable to get the files and the
test results were related to execution path and not written tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,7 +17,12 @@ add_executable(${INCH_TEST_NAME} ${TEST_SOURCES} ${IMPLEMENTATION_SOURCES})
 # Where are the header files
 target_include_directories(${INCH_TEST_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include/)
 
-target_link_libraries(${INCH_TEST_NAME} Catch2::Catch2 fmt::fmt-header-only)
+target_link_libraries(
+  ${INCH_TEST_NAME}
+  Catch2::Catch2
+  fmt::fmt-header-only
+  coverage_config
+  )
 
 # Need to link the filesystem library in older compiler versions
 # But not for MSVC
