--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,11 @@ jobs:
       - run:
           name: "Code coverare metrics"
           command: |
-            cd ../Debug-build && ctest -V && ./bin/inch -i ../project/options.template
-            bash <(curl -s https://codecov.io/bash) -x /usr/bin/gcov-8 || echo "Codecov did not collect coverage reports"
-            # lcov --directory . --capture --gcov-tool /usr/bin/gcov-8 --output-file coverage.info
-            # lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info && lcov --list coverage.info
-            # bash <(curl -s https://codecov.io/bash) -x /usr/bin/gcov-8 -f coverage.info || echo "Codecov did not collect coverage reports"
+            cd ../Debug-build && ctest -V
+            lcov --directory . --capture --gcov-tool /usr/bin/gcov-8 --output-file coverage.info
+            lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info
+            lcov --list coverage.info
+            bash <(curl -s https://codecov.io/bash) -x /usr/bin/gcov-8 -f coverage.info || echo "Codecov did not collect coverage reports"
       - run: uname -a
 
   build_gcc_release:
