--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,8 @@ jobs:
           command: |
             git submodule init
             git submodule update --remote
-      - run: cmake -GNinja -H. -B../Debug-build -DINCH_CODE_COVERAGE=ON -DCOVERAGE_COMMAND=/usr/bin/gcov-8 -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Debug
+      - run: cmake -H. -B../Debug-build -DINCH_CODE_COVERAGE=ON -DCOVERAGE_COMMAND=/usr/bin/gcov-8 -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Debug
       - run: cmake --build ../Debug-build
-      # - run: echo "${CIRCLE_PROJECT_REPONAME} ${CIRCLE_WORKING_DIRECTORY}" && pwd && ls -l ../ && ls -l ../project
       - run: cd ../Debug-build && ctest -V
       - run:
           name: "Code coverare metrics"
